--- a/part6/16_aph-catalogue.Rmd
+++ b/part6/16_aph-catalogue.Rmd
@@ -12,7 +12,7 @@ Table: (\#tab:APHresearch) Overview of APH EMA research groups.
 |---------------:|-----------------:|---------------------:|--------------------:|
 | CASPAR         | Suicide          | ilumivu.com          | VU                  |
 | Chronic Fatigue| Chronic Fatigue  | ???                  | AMC                 |
-| E-COMPARED     | Depression       | ict4depression.eu    | VU                  |
+| Moodbuster/ E-COMPARED     | Depression       | ict4depression.eu    | VU                  |
 | FAntasTIGUE    | Fatigue          | tinyurl.com/ybb7up87 | AMC                 |
 | GROUP          | Heart failure    | --                   | AMC                 |
 | IMPACT         | Heart failure    | impactonderzoek.nl   | AMC                 |
@@ -26,7 +26,7 @@ Table: (\#tab:APHresearch) Overview of APH EMA research groups.
 ### The CASPAR Project (approval 16-02-2018)
 \index{CASPAR}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor [@Nuij2018]. 
+The Continuous Assessment for Suicide Prevention And Research (CASPAR) study (2016-2010) aims to evaluate the feasibility of mobile safety planning and daily mobile self-monitoring in routine care treatment for suicidal patients, and to conduct fundamental research on suicidal processes [@Nuij2018]. 
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
@@ -40,7 +40,10 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue 
 | EMA active     | Participants are prompted 3 times a day to answer 8 self-report items (e.g. 'I feel sad'). Items are based on existing questionnaires, such as the Patient Health Questionnaire (PHQ-9) and are rated on a 7-point Likert-scale, ranging from 'Not at all' to 'Very much'. Measured concepts include mood, rumination, hopelessness, defeat, entrapment, burdensomeness, belongingness, impulsiveness, suicidal imagery and suicidal ideation. Results are presented to patients in separate graphs. |
 | EMA passive | Location data are gathered to indicate movement patterns and daily rhythm. Planned variables include accelerometer and smartphone usage patterns. These data are not visible to patients. |
 | Data management | Patients receive a unique code to log in to the app. No names, phone numbers or other contact information are stored on the Ilumivu server. Patients are encouraged to show their graphs to their clinicians during treatment sessions. |
-| Project goals | The primary objective of the CASPAR study is to test the feasibility of smartphone-based safety planning and real-time self-monitoring for patients with major depression or dysthymia and suicide risk in mental health care. Feasibility will be operationalised in terms of uptake, usage, acceptability, usability and patient satisfaction. EMA data will be used to (a) empirically validate hypothesised psychological processes and stages of suicide pathways, (b) identify individual pathways to suicidal behaviour, and (c) profile types of suicidal individuals. |
+| Project goals | The primary objective of the CASPAR study is to test the feasibility of smartphone-based safety planning and real-time self-monitoring for patients with major depression or dysthymia and suicide risk in mental health care. Feasibility will be operationalised in terms of uptake, usage, acceptability, usability and patient satisfaction. EMA data will be used to: |
+| | (a) empirically validate hypothesised psychological processes and stages of suicide pathways | 
+| | (b) identify individual pathways to suicidal behaviour | 
+| | (c) profile types of suicidal individuals. |
 | Results | An interactive safety plan that patients can access 24/7, increased disease awareness of patients due to self-monitoring, and input for the national and international field of mental health care by sharing our results and our data, ultimately contributing to more personalised interventions according to precision medicine principles, and more effective suicide prevention. |
 | Lessons learned | Constructing the right EMA items takes time. The constructs that you need to measure should be based on theory. Translate these concepts to momentary items in collaboration with EMA experts. Then test extensively among your target group.|
 
@@ -64,24 +67,36 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue 
 | Lessons learned | Think carefully beforehand which variables to include for EMA as assessing too many variables will make it difficult to determine which variables to include in model. It also makes interpretation of results difficult. Prepare clear and detailed guideline/handbook for colleagues who will assist in including participants, and be aware of potential problems with the EMA app. This is to ensure that colleagues will be motivated to include participants into the study. |
 
 
-### E-COMPARED (EU)
-\index{E-COMPARED}
+### Moodbuster and E-COMPARED (EU)
+\index{Moodbuster and E-COMPARED}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
-
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam. 
+| Aspect         | Description                                                  | 
+|:---------------|:-------------------------------------------------------------|
+| Project team | Heleen Riper, PhD; Jeroen Ruwaard, PhD, Stasja Draisma, PhD., ?? |
+| APH site | Vrije Universiteit Amsterdam, GGZ inGeest |
+| Full title | Moodbuster |
+| Project | Developed within the European FP7 project “ICT4Depression” (http://www.ict4depression.eu/. Applied in Horizon 2020 FP7 EU-project “European COMPARative Effectiveness research on blended Depression treatment versus treatment-as-usual” (E-COMPARED). |
+| Topic | Ecological Momentary Assessment alongside formal depression treatment |
+| Status | Data collection completed (2012 – 2018) |
+| Target population | Patients with Major Depressive Disorder in primary and specialized mental health care |
+| Platform used | Moodbuster (http://www.ict4depression.eu/moodbuster/). The platform is currently available in five languages: English, Dutch, German, Polish and French |
+| | The original Moodbuster platform aimed to provide unguided self-help treatment to people with depressive symptoms. ICT4depression had 4  components: |
+| | 1) physiological sensors (chest strap: heart rate, respiration rate and acceleration data, and glove: heart rate and sympathetic nervous system responses) |
+| | 2) a medication adherence monitor (stand-alone MEMS monitor) |
+| | 3) a website with treatment modules, automated feedback messages and tools (calendar, mood graph, sensor chart, ratings) |
+| | 4) Moodbuster (Android) app for access to treatment modules and mood ratings, location and activity tracking, and aggregation of physiological sensors (http://www.ict4depression.eu/wp/wp-content/uploads/2011/03/FP7-248778-D4.7r1.pdf). |
+| E-COMPARED | Within the E-COMPARED study, the Moodbuster website and application were used and a therapist portal was added, in order to allow therapists to monitor patients’ progress and send feedback messages. |
+| EMI | The platform sent out automated reminders for scheduled activities within the modules and therapist appointments, and tailored automated motivational text messages. The aim of EMI was to keep patients engaged with Moodbuster (rate mood and log in on platform). |
+| EMA active | Patients rated 7 items on a visual analogue scale (VAS), ranging from 0 (low) to 10 (high): 
+| | Monitoring of sleep (1 item, “How well did you sleep tonight”) |
+| | Mood (1 item, “How is your mood right now”) |
+| | Worrying (1 item, “How much do you worry at the moment”) |
+| | Self-esteem (1 item, “How do you feel about yourself right now”) | 
+| | Activities (2 items, “How much did you enjoy activities today” and “To what extent did you accomplish pleasant activities today”) | 
+| | Social contacts (1 item, “How much were you involved in social interactions today”). |
+| Data management | Patients and therapists accessed the platform with a personalized log-in. Mood was assessed daily at a random time point between 10:00 and 22:00. During the first and last 7 days of treatment, Sleep, Worrying and Self-esteem items were assessed in the morning (around 10:00). In the evening (around 22:00) these questions were repeated, along with the Activity and Social contact items. Patient data was stored on a server under a unique participant ID number. Patients with an iPhone were offered an android phone for the duration of EMA. |
+| Results | | 
+| Lessons learned | | 
 
 
 ### FAntasTIGUE
@@ -152,7 +167,18 @@ purus nec, lobortis imperdiet diam.
 | Status: 2015 - 2017 |
 | Target population | Selected sample of NESDA participants with symptoms of depression and healthy controls |
 | Platform used | RoQua (https://www.roqua.nl/) | 
-| EMA active | The self-report questionnaire contained 31 items. Items were rated on a 7-point Likert scale, ranging from 'not [at all]' to 'very'.  1) Valance and arousal (2 items, "I'm feeling ...") which were scored on Likert scales ranging from very unpleasant to very pleasant and very calm to very excited;  2) Current state (12 items, "I feel relaxed", "I feel down", "I feel cheerful"), symptoms of depression/anxiety (4 items, "I worry a lot", "I am able to concentrate well", and physical condition (2 items, "I feel tired") scored on 7-point Linkert scales ranging from 1 (not) to 7 (very); 3) Social context (2 items, "Where are you now" (e.g. at the neighbour's house), "In who's company are you now") and a follow-up question (1 item, "I would rather have had company" or "I experience my company as being …" (unpleasant - pleasant)); 4) Sleep (3 items on sleep quality and duration); 5) Daily uplifts/hassles, when rated with yes, participants were asked to elaborate (3 items on intensity, importance and internal or external cause); 5) Activities (1 multiple-choice item, including social interaction, additional (eating) and other (exercise); 6) Substance use: smoking, coffee and alcohol (number of units); 7) Eating (1 item at final daily prompt, "Did you eat more of less than usual"); And an evaluative addendum questionnaire: 1) Burden (1 item, "How disrupting was it to fill in this questionnaire"; 2) Open ended question for general comments on circumstances that might influence answers.   Participants were prompted five times a day, for two weeks. Prompts consisted of a SMS, which contained a link to the EMA questions. Participants were asked to fill in the questionnaire within 15 minutes after the SMS. After 30 minutes a reminder was sent, and after 60 minutes the link would become inactive. Each questionnaire contained circa 35 items. Questions Q1 till Q14 have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are inspired on earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015). |
+| EMA active | The self-report questionnaire contained 31 items. Items were rated on a 7-point Likert scale, ranging from 'not [at all]' to 'very'. Contructs of interest were: |
+| | 1) Valance and arousal (2 items, "I'm feeling ...") which were scored on Likert scales ranging from very unpleasant to very pleasant and very calm to very excited |
+| | 2) Current state (12 items, "I feel relaxed", "I feel down", "I feel cheerful"), symptoms of depression/anxiety (4 items, "I worry a lot", "I am able to concentrate well", and physical condition (2 items, "I feel tired") scored on 7-point Linkert scales ranging from 1 (not) to 7 (very) |
+| | 3) Social context (2 items, "Where are you now" (e.g. at the neighbour's house), "In who's company are you now") and a follow-up question (1 item, "I would rather have had company" or "I experience my company as being …" (unpleasant - pleasant)) | 
+| | 4) Sleep (3 items on sleep quality and duration) | 
+| | 5) Daily uplifts/hassles, when rated with yes, participants were asked to elaborate (3 items on intensity, importance and internal or external cause) |
+| | 5) Activities (1 multiple-choice item, including social interaction, additional (eating) and other (exercise) |
+| | 6) Substance use: smoking, coffee and alcohol (number of units); 7) Eating (1 item at final daily prompt, "Did you eat more of less than usual") |  
+| | And an evaluative addendum questionnaire | 
+| | 1) Burden (1 item, "How disrupting was it to fill in this questionnaire" | 
+| | 2) Open ended question for general comments on circumstances that might influence answers. |
+| | Participants were prompted five times a day, for two weeks. Prompts consisted of a SMS, which contained a link to the EMA questions. Participants were asked to fill in the questionnaire within 15 minutes after the SMS. After 30 minutes a reminder was sent, and after 60 minutes the link would become inactive. Each questionnaire contained circa 35 items. Questions Q1 till Q14 have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are inspired on earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015). |
 | Data management | EMA started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone if they had sufficient data, or access to WiFi for at least 80% of the two-week time period. If participants did not have a smartphone, they could borrow one. Patients were briefed on the EMA study during a face-to-face session with a research assistant (following standard NESDA data 9-year follow-up assessment). Participants needed to answer all questions before the questionnaire could be send to the secured server. In order to motivate participants to adhere to EMA, they were shown two examples of mood fluctuation reports, one with a 43% compliance rate and one with a 96% compliance rate. Personalized reports were sent via e-mail in a password protected document. During data collection, patients were contacted by a research assistant after 24 hours and 7 days in order to enquire whether problems had occurred with EMA. Research assistants actively monitored data collection and contacted participants if they missed three consecutive questionnaires. Data were stored in a secured web-environment of the University Medical Centre Groningen (UMCG).|
 | EMA passive | In order to record the amount of physical activity during EMA monitoring, participants were asked to wear an accelerometer (GENEActiv) on their non-dominant wrist 24 hours a day for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment. After data collection, participants mailed their watch to the research center. Data was extracted via a USB with GENEActiv software. |
 | Results | EMA data will be used to assess a variety of research questions, concerning topics such as the dynamic interplay between cognitions, emotions, behavior and environment in daily life of individuals, the feasibility of EMA in participants with affective disorders, chronotype and diurnal patterns of activity in depressed versus non-depressed participants, and MDD subtypes. |
