--- a/book.bib
+++ b/book.bib
@@ -413,6 +413,17 @@
   keywords     = {book, r, statistics},
 }
 
+@inbook{Geus1996,
+title = "Ambulatory assessment of parasympathetic/sympathetic balance by impedance cardiography",
+author = "{de Geus}, E.J.C. and {van Doornen}, L.J.P.",
+year = "1996",
+language = "English",
+pages = "141--164",
+editor = "J. Fahrenberg and M. Myrtek",
+booktitle = "Ambulatory Assessment. Computer assisted psychological and psychophysiological methods in monitoring and field studies",
+publisher = "Hogrefe & Huber",
+}
+
 
 @Article{Green2016,
     title = {simr: an R package for power analysis of generalised linear mixed models by simulation},
@@ -685,19 +696,7 @@ year = {1999}
   url      = {http://www.ncbi.nlm.nih.gov/pubmed/17371121 http://doi.apa.org/getdoi.cfm?doi=10.1037/1040-3590.19.1.25},
 }
 
-
-@book{Pinheiro2000,
-  author = {Pinheiro, José C. and Bates, Douglas M.},
-  publisher = {Springer-Verlag New York, Inc.},
-  doi = {10.1016/j.agsy.2005.11.004},
-  isbn = {0387989579}
-,  title = {{Mixed-Effects Models in S and S-PLUS}},
-year = {2000}
-}
-
-
-
-Article{Posner2005,
+@Article{Posner2005,
   author  = {Posner, J and Russell, J A and Peterson, B S},
   title   = {{The circumplex model of affect: An integrative approach to affective neuroscience, cognitive development, and psychopathology}},
   journal = {Development and Psychopathology},
